Name:                Mosaic
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          nsandber@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable Mosaic
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    blaze-html                >= 0.5.1.1 && < 0.6.1.1,
    snap-blaze                == 0.2.1.0,
    transformers              == 0.3.0.0,
    directory                 == 1.1.0.2,
    vector                    == 0.10.0.1,
    JuicyPixels               == 3.1,
    filepath                  == 1.3.0.0,
    HDBC-sqlite3              == 2.3.3.0,
    HDBC                      == 2.3.1.2,
    network                   == 2.3.0.13,
    HTTP                      == 4000.2.3

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -XRankNTypes -XBangPatterns -XDoAndIfThenElse
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
